--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 	<body>
 		<a id='totop'>
-			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+			<p id='totoptext'>Back to top</p>
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
 				<path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
 			</svg>
 		</a>
@@ -20,7 +21,7 @@
 			<div class='nav-items'>
 				<a class='nav-item about-me-button'>About Me</a>
 				<a class='nav-item projects-button'>Projects</a>
-				<a class='nav-item' href='https://github.com/Beastwick18'>Github Profile</a>
+				<a class='nav-item github-button' href='https://github.com/Beastwick18'>Github Profile</a>
 			</div>
 		</div>
 		<div class='main'>
@@ -37,7 +38,12 @@
 					<p class='name'>Steven Culwell</p>
 					<p class='subtitle'>Computer Science Major</p>
 					<p class='subtitle'>University of Texas at Arlington</p>
-				</div
+				</div>
+			</div>
+			<div id='scroll-for-more'>
+				<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+				</svg>
 			</div>
 		</div>
 		<div class='subpage' id='about-me'>
