Added contact links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="https://livejs.com/live.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 	<body>
 		<a href="#top" id='totop'>
@@ -38,6 +39,12 @@
 					<p class='name'>Steven Culwell</p>
 					<p class='subtitle'>Computer Science Major</p>
 					<p class='subtitle'>University of Texas at Arlington</p>
+					<div class='contacts'>
+						<a href="https://github.com/Beastwick18"><i class="fa fa-github" aria-hidden="true"></i></a>
+						<a href="https://www.linkedin.com/in/steven-culwell-5b92b3239/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+						<a href="mailto:bradculwell@pm.me"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					</div>
+
 				</div>
 			</div>
 			<div id='scroll-for-more'>
