--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div id='top' style='position: absolute; top: 0;'></div>
 		<div class='nav'>
 			<div class='nav-items'>
-				<a href="#about-me" class='nav-item about-me-button'>About Me</a>
-				<a href="#projects" class='nav-item projects-button'>Projects</a>
+				<a href="https://github.com/Beastwick18" class='nav-item about-me-button'>About Me</a>
+				<a href="https://github.com/Beastwick18?tab=repositories" class='nav-item projects-button'>Projects</a>
 				<a class='nav-item github-button' href='https://github.com/Beastwick18'>Github Profile</a>
 			</div>
 		</div>
