--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://bradculwell.dev/</title>
-<meta http-equiv="refresh" content="0; URL=https://bradculwell.com/">
+<meta http-equiv="refresh" content="0; URL=https://bradculwell.dev/">
 <link rel="canonical" href="https://bradculwell.dev/">
